--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -6,7 +6,7 @@ params:
   integration_methods: !r as.vector(c("fastmnn", "harmony", "cca", "rpca"))
   batch_column: "batch"
   celltype_column: "celltype"
-  max_celltypes: 5
+  max_celltypes: 20
   num_pcs: 20
   ari_k_min: 5
   ari_k_max: 25
@@ -44,7 +44,7 @@ theme_set(theme_bw())
 set.seed(params$seed)
 
 # Maximum value for `max_celltypes` 
-celltypes_ceiling <- 20
+celltypes_ceiling <- 10
 ```
 
 
@@ -72,11 +72,13 @@ knitr::knit_hooks$set(
    }
 )
 
-# Check max_celltypes params
+# Check max_celltypes param
 if (params$max_celltypes > celltypes_ceiling) {
   warning(
-    "The requested number of celltypes {params$max_celltypes} is too high. 
-    It will be changed to the maximum-allowed value of {celltypes_ceiling.}"
+    glue::glue(
+      "The requested number of celltypes {params$max_celltypes} is too high. 
+      It will be changed to the maximum-allowed value of {celltypes_ceiling}"
+    )
   )
   max_celltypes <- celltypes_ceiling
 } else {
@@ -222,6 +224,7 @@ if(params$celltype_column %in% coldata_names){
       glue::glue(
         'There are more cell types in this data than can be displayed in plots.
         Only the top {max_celltypes} cell types are explicitly shown in applicable plots. All remaining cell types are collectively designated as "other".
+        To change this value, use the `max_celltypes` RMarkdown parameter.
         '
       )
     )
@@ -242,52 +245,47 @@ First, how many batches and celltypes (if present) are there? If there are cellt
 ```{r table-batch-celltypes}
 # pull out an SCE object for this section
 # all SCEs in the list should be equivalent for these calculations and plots
-sce_coldata <- colData(sce_list[[1]])
+sce_coldata <- colData(sce_list[[1]]) %>% tibble::as_tibble()
+
+# helper function to count
+count_groups <- function(colname) {
+  # colname: the column of interest we should count
+  colname_sym <- rlang::sym(colname)
+  sce_coldata %>%
+    dplyr::count(!!colname_sym, name = "count")
+}
 
 # How many batches?
-n_batches <- length(unique(sce_coldata[,params$batch_column]))
-batch_table <- table(sce_coldata[,params$batch_column])
+n_batch_df <- count_groups(params$batch_column)
 print(
-  glue::glue("There are {n_batches} total batches, with the following number of cells:
-  {batch_table}
-  ")
+  glue::glue("There are {nrow(n_batch_df)} total batches, with the following number of cells:")
 )
+gt::gt(n_batch_df)
 
 # If there are celltypes, perform calculations
 if (celltypes_present == TRUE) {
   
   # How many celltypes?
-  known_celltypes <- sce_coldata[,params$celltype_column] [!is.na(sce_coldata[,params$celltype_column])]
-  n_celltypes <- length(unique(known_celltypes))
-  
+  n_celltypes_df <- count_groups(params$celltype_column)
   print(
-    glue::glue("Not including NA cell types, there are {n_celltypes} total cell types, with the following number of cells:")
+    glue::glue("Not including NA cell types, there are {nrow(n_celltypes_df)} total cell types, with the following number of cells:")
   )
-  table(known_celltypes)
+  gt::gt(n_celltypes_df)
 }
 ```
 
-
+If celltypes are available, a barplot below will show how the celltypes are distributed across batches. 
+The total height of each bar corresponds to the number of cells in the given batch.
+If celltypes are not available, there will not be a barplot here.
 
 
 ```{r barplot-batch-celltypes}
-# If there are celltypes, make barplots
+# If there are celltypes, make barplot
 if (celltypes_present == TRUE) {
-  
-  print(
-    glue::glue(
-      "The plots below shows how the celltypes are distributed across batches. 
-       The total height of each bar corresponds to the number of cells in the given batch.
-       The plot is displayed both with and without the infrequent cell types collapsed into 'other'.
-      "
-    )
-  )
-  
   plot_barplot_batch_celltype(sce_coldata, params$batch_column, "celltype_plot_names", 
                               plot_colors = celltype_colors, 
-                              plot_title = glue::glue("Top {max_celltypes} cell types and other"))
+                              plot_title = glue::glue("Cell types"))
 }
-
 ```
 
 
@@ -298,18 +296,23 @@ if (celltypes_present == TRUE) {
 #  the legends for batches and celltypes, when present
 
 # helper function:
-extract_labels <- function(colname) {
-  as.data.frame(table(sce_coldata[,colname])) %>%
-    dplyr::mutate(label = glue::glue("{Var1} (N={Freq})")) %>%
+extract_labels <- function(count_df, colname) {
+  colname_sym <- rlang::sym(colname)
+  # count_df is a tibble of counts with two columns: `colname`, and `count`
+  count_df %>%
+    dplyr::mutate(label = paste0(
+      !!colname_sym, " (N=", count, ")"
+      )
+    ) %>%
     dplyr::pull(label)
 }
 
 # Create batch label vector
-batch_plot_labels <- extract_labels(params$batch_column)
+batch_plot_labels <- extract_labels(n_batch_df, params$batch_column)
 
-# Create celltype label vector, considering top 5 & 'other' (not all celltypes) 
+# Create celltype label vector
 if (celltypes_present) {
-  celltype_plot_labels <- extract_labels("celltype_plot_names")
+  celltype_plot_labels <- extract_labels(n_celltypes_df, params$celltype_column)
 }
 ```
 
